# FinancialShit

./: .gitignore  README.md  pyproject.toml  requirements.txt  security_check.py  server.py
.agents/: AGENTS.md
core/: __init__.py  agent.py  analysis.py  cache.py  config.py  extractors.py  financial_extractor.py  llm.py  rag_platform.py  reranker.py  store.py  text_utils.py  valuation_model.py  vector_store.py
tests/: conftest.py
web/: index.html
web/static/: app.js  chat.js  styles.css
