[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "valuation-rag"
version = "0.1.0"
description = "M&A Valuation RAG — retrieves evidence from books and annual reports"
requires-python = ">=3.12"
dependencies = [
    "flask>=3",
    "flask-limiter>=3",
    "python-dotenv>=1",
    "pypdf>=5",
    "pdfplumber>=0.11",
    "sentence-transformers>=3",
    "chromadb>=1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "B904",    # raise-without-from-inside-except — intentional in some cases
    "SIM108",  # use ternary — not always clearer
    "B008",    # do not perform function calls in argument defaults
    "N806",    # non-lowercase variable in function — _MODEL_NAME convention
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused-import — re-exports are intentional

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
